--- a/modularité/tp3/build.gradle
+++ b/modularité/tp3/build.gradle
@@ -15,7 +15,13 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    runtimeOnly 'org.postgresql:postgresql'
+	implementation('org.springframework.boot:spring-boot-starter-security')
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	testImplementation('org.springframework.security:spring-security-test')
+	runtimeOnly 'org.postgresql:postgresql'
+	runtimeOnly('org.apache.tomcat.embed:tomcat-embed-jasper')
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
